fix(tabs): visibilite des tabs non actifs

--- a/src/tabs/styles/_module.scss
+++ b/src/tabs/styles/_module.scss
@@ -149,6 +149,7 @@
     **/
     @at-root #{&}:not(&--selected) {
       visibility: hidden;
+      display: none;
     }
   }
 }
